# poolx

./: Cargo.toml  README.md
poolx/: Cargo.toml  README.md
poolx-example/: Cargo.toml
poolx-example/src/: main.rs
poolx-redis/: Cargo.toml  README.md
poolx-redis/src/: lib.rs
poolx/src/: connection.rs  error.rs  inner.rs  lib.rs
src/: conn.rs  connection.rs  database.rs  error.rs  inner.rs  lib.rs  maybe.rs  options.rs  sync.rs
ypool/: Cargo.toml
ypool-redis/: Cargo.toml
ypool-redis/src/: lib.rs
ypool/src/: error.rs  lib.rs  options.rs  sync.rs
