[package]
name = "crab-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
crossbeam-queue = "0.3.11"
either = "1.10.0"
event-listener = "5.1.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"
