[package]
name = "poolx"
documentation = "https://docs.rs/poolx"
description = "MySQL driver implementation for SQLx. Not for direct use; see the `sqlx` crate for details."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crossbeam = "0.8.4"
crossbeam-queue = "0.3.11"
either = "1.10.0"
event-listener = "5.1.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
url = "2.5.0"

